poke/testsuite/poke.pkl/try-catch-diag-5.pk
/* { dg-do compile } */

/* This tests that the emitted diagnostic has the right location.  */

defun foo = int:
  {
   try
     raise Exception {code = 1};
   catch if 10  /* { dg-error "expected" } */
   {
     raise Exception {code = 0};
   }
   return 666;
  }
